--- a/config
+++ b/config
@@ -38,12 +38,45 @@
 
 ##### Self Declaration For SBMR Interface #####
 # If system supports the compliant interfaces, change corresponding variable to 1.
-#
+
+# In-Band
+-v M4_IB_1_Interface_Declaration:0
+
+# JTAG
 -v M1_JTAG_1_2_Interface_Declaration:0
 -v M2_JTAG_1_2_Interface_Declaration:0
--v M2_IO_1_NCSI_Interface_Declaration:0
--v M2_RAS_1_2_Function_Declaration:0
+-v M3_JTAG_1_2_Interface_Declaration:0
 
+# Side-Band
+-v M3_SB_1_9_Interface_Declaration:0
+-v M4_SB_1_Interface_Declaration:0
+
+# OOB
+-v M3_OOB_1_2_Interface_Declaration:0
+
+# BMC-IO
+-v M2_IO_1_NCSI_Interface_Declaration:0
+-v M3_IO_1_2_Interface_Declaration:0
+-v M4_IO_1_3_Interface_Declaration:0
+
+# SPDM
+-v M3_SPDM_1_2_Interface_Declaration:0
+
+# RAS
+-v M2_RAS_1_2_Function_Declaration:0
+-v M3_RAS_1_Function_Declaration:0
+
+# SBMR future requirements
+# In-Band
+-v M5_IB_1_2_Interface_Declaration:0
+# Side-Band
+-v M5_SB_1_Interface_Declaration:0
+# BMC-IO
+-v M5_IO_1_Interface_Declaration:0
+# OOB
+-v M5_OOB_1_Interface_Declaration:0
+# Host-to-SatMC interface
+-v M5_HS_1_2_Interface_Declaration:0
 
 ##### Debug : Redfish Mockup Creator #####
 #--include Test_BMC_Redfish_Using_Redfish_Mockup_Creator
